--- a/package.json
+++ b/package.json
@@ -7,10 +7,8 @@
     "node": "18.x"
   },
   "scripts": {
-    "test": "mocha ./tests/MailController.test.js -w",
     "start": "node ./api/index.js",
-    "dev": "nodemon ./api/index.js localhost 4000",
-    "curl": "curl http://localhost:3001/mail"
+    "dev": "nodemon ./api/index.js localhost 4000"
   },
   "author": "Victor Labussiere",
   "license": "ISC",
